# Yvy

./: README.md
PSTAND/: P_A.py  P_B.py
TODO/src/: DetectGate.h  navigation.h
docs/navigation/: Classes AUV Cpp 6625.drawio
software/jetson/src/EmTestes/: NovaMain.py  detect_gate  run  teste.asm  teste.c  teste2.c  teste4.1.py  teste4.2.py  teste5.cpp
software/jetson/src/EmTestes/lib/: CMakeLists.txt  capture.cpp  capture.h  compilar.sh  detector.cpp  detector.h  mainTeste.cpp  preprocessor.cpp  preprocessor.h
software/jetson/src/programs/: main.py
software/jetson/src/shells/: ip_config_exe.sh
software/raspberry_pi/src/navigation/navigation_5.0/: CMakeLists.txt  run.sh  run_with_dependencies.sh
software/raspberry_pi/src/navigation/navigation_5.0/src/: activator.cpp  auverror.cpp  auverror.h  logs.cpp  logs.h  navigation.cpp  sensors.cpp  thrustersctrl.cpp  thrustersctrl.h  utils.cpp  utils.h  yoloctrl.cpp  yoloctrl.h
software/raspberry_pi/src/navigation/navigation_5.0_mpu6050/src/: sensors.cpp  sensors.h
